@startuml Entity_Model
hide circle
skinparam classAttributeIconSize 0

class CALAMVIEC {
  - maCa : int
  - maNV : int
  - maMayPOS : String
  - thoiGianMoCa : Timestamp
  - thoiGianDongCa : Timestamp
  - trangThai : String
}

class DOISOAT {
  - maCa : int
  - tienKhaiBaoDauCa : BigDecimal
  - tongTienHeThong : BigDecimal
  - tienThucTeDem : BigDecimal
  - chenhLech : BigDecimal
  - lyDoChenhLech : String
}

class NANGLUCSANXUAT {
  - ngaySanXuat : Date
  - gioiHanSoBanh : int
  - soBanhDaNhan : int
}

class CTPHIEUNHAP {
  - maLo : int
  - maPN : int
  - maNL : int
  - soLuong : double
  - donGia : BigDecimal
  - soLuongConLai : double
  - ngaySanXuat : Date
  - hanSuDung : Date
  - maVach_Lo : String
}

class CTPHIEUXUAT_NL {
  - maPX : int
  - maLo : int
  - soLuong : double
}

class CTPHIEUXUAT_TP {
  - maPX : int
  - maSP : int
  - soLuong : double
  - donGiaVon : BigDecimal
}

class CHUCNANG {
  - maChucNang : int
  - tenChucNang : String
  - moTa : String
  - module : String
}

class CONGTHUC {
  - maSP : int
  - maNL : int
  - soLuongTieuHao : double
}

class CTDONHANG {
  - maCTHD : int
  - maDon : int
  - maSP : int
  - soLuong : int
  - donGia : BigDecimal
  - phanTramGiam : double
  - donGiaVon : BigDecimal
}

class CTDONTUYCHINH {
  - maCTTC : int
  - maDon : int
  - maSP : int
  - soLuong : int
  - maKC : Integer
  - maCot : Integer
  - maNhan : Integer
  - maTrangTri : Integer
  - loiChucTrenBanh : String
  - ghiChuThoBanh : String
  - hinhAnhThamKhao : String
  - donGia : BigDecimal
  - donGiaVon : BigDecimal
  - thoiGianChuanBi : Integer
}

class DANHMUCSP {
  - maDM : int
  - tenDM : String
  - thoiDiemXoa : Timestamp
  - maNX : int
}

class DONDATHANG {
  - maDon : int
  - ngayLap : Timestamp
  - ngayGioNhanBanh : Timestamp
  - maKH : Integer
  - maNV_Lap : int
  - maTrangThai : int
  - tongTienHDBan : BigDecimal
  - tienDaCoc : BigDecimal
  - phienBan : int
  - hinhThucNhan : int
  - diaChiGiao : String
  - sdtGiao : String
}

class HANGTHANHVIEN {
  - maHang : int
  - tenHang : String
  - diemToiThieu : int
  - phanTramGiamGia : BigDecimal
  - thoiDiemXoa : Timestamp
  - maNX : int
}

class HOADON {
  - maHD : int
  - maDon : Integer
  - maCa : int
  - ngayXuatHD : Timestamp
  - thueVAT : double
  - tongTienThanhToan : BigDecimal
  - tienHangGoc : BigDecimal
  - maPTTT : int
  - loaiHD : String
  - trangThai : String
}

class HOATDONGNHANVIEN {
  - maHoatDong : int
  - maNV : int
  - nhom : String
  - hanhDong : String
  - entityId : Integer
  - thoiGian : Timestamp
}

class KHACHHANG {
  - maKH : int
  - hoTen : String
  - sdt : String
  - diaChi : String
  - ngayDangKy : Date
  - diemTichLuy : int
  - maHang : Integer
  - thoiDiemXoa : Timestamp
  - maNX : int
}

class LOAITHUCHI {
  - maLoaiThuChi : int
  - tenLoaiThuChi : String
  - phanLoai : String
  - thoiDiemXoa : Timestamp
  - maNX : int
}

class NGUYENLIEU {
  - maNL : int
  - tenNL : String
  - xuatXu : String
  - maDVT : int
  - giaVonTrungBinh : BigDecimal
  - mucTonAnToan : double
  - soLuongTonTong : double
  - datChuanVSATTP : int
  - heSoQuyDoi : double
  - phienBan : int
  - thoiDiemXoa : Timestamp
  - maNX : int
}

class NHACUNGCAP {
  - maNCC : int
  - tenNCC : String
  - sdt : String
  - diaChi : String
  - thoiDiemXoa : Timestamp
  - maNX : int
}

class NHANVIEN {
  - maNV : int
  - hoTen : String
  - ngaySinh : Date
  - sdt : String
  - trangThaiLamViec : int
}

class TAIKHOAN {
  - maTaiKhoan : int
  - maNV : int
  - tenDangNhap : String
  - matKhau : String
  - email : String
  - trangThaiTK : int
  - ngayTao : Timestamp
}

class NHANVIEN_VAITRO {
  - maNV : int
  - maVaiTro : int
}

class PHIEUNHAPKHO {
  - maPN : int
  - ngayNhap : Timestamp
  - maNV : int
  - maNCC : int
  - tongTienNhap : BigDecimal
}

class PHIEUXUATKHO {
  - maPX : int
  - ngayXuat : Timestamp
  - lyDoXuat : String
  - maNV : int
}

class PHIEUTHUCHI {
  - maPhieuTC : int
  - ngayTao : Timestamp
  - maLoaiThuChi : int
  - soTien : BigDecimal
  - maNV : int
  - maHD : Integer
  - maPN : Integer
  - maCa : Integer
  - ghiChu : String
  - trangThai : String
}

class SANPHAM {
  - maSP : int
  - maDM : int
  - tenSP : String
  - giaVon : BigDecimal
  - giaBan : BigDecimal
  - hinhAnh : String
  - choPhepTuyChinh : int
  - thoiGianBaoQuan : int
  - soLuongTon : double
  - phienBan : int
  - thoiDiemXoa : Timestamp
  - thoiGianChuanBi : int
  - maNX : int
}

class VAITRO {
  - maVaiTro : int
  - tenVaiTro : String
  - moTa : String
  - thoiDiemXoa : Timestamp
  - maNX : int
}

class VAITRO_CHUCNANG {
  - maVaiTro : int
  - maChucNang : int
  - canView : int
  - canAdd : int
  - canEdit : int
  - canDelete : int
  - canDownload : int
  - thoiDiemXoa : Timestamp
  - createdAt : Timestamp
}

class TRANGTHAIDON {
  - maTrangThai : int
  - tenTrangThai : String
}

class MESANXUAT {
  - maMe : int
  - maSP : int
  - soLuongSanXuat : double
  - ngaySanXuat : Timestamp
  - maNV : int
  - maPX : int
  - hanSuDung : Date
  - soLuongConLai : double
}

' Quan hệ
CALAMVIEC "1" -- "0..1" DOISOAT : 1-1
CALAMVIEC "1" -- "*" HOADON
CALAMVIEC "1" -- "*" PHIEUTHUCHI

NHANVIEN "1" -- "0..1" TAIKHOAN
NHANVIEN "1" -- "*" NHANVIEN_VAITRO
NHANVIEN_VAITRO "*" -- "1" VAITRO
VAITRO "1" -- "*" VAITRO_CHUCNANG
VAITRO_CHUCNANG "*" -- "1" CHUCNANG

NHANVIEN "1" -- "*" HOATDONGNHANVIEN
NHANVIEN "1" -- "*" PHIEUNHAPKHO
NHANVIEN "1" -- "*" PHIEUXUATKHO
NHANVIEN "1" -- "*" DONDATHANG : lap don
NHANVIEN "1" -- "*" MESANXUAT

KHACHHANG "*" -- "0..1" HANGTHANHVIEN
KHACHHANG "1" -- "*" DONDATHANG

DONDATHANG "1" -- "*" CTDONHANG
DONDATHANG "1" -- "*" CTDONTUYCHINH
DONDATHANG "*" -- "1" TRANGTHAIDON
DONDATHANG "0..1" -- "1" HOADON

SANPHAM "*" -- "1" DANHMUCSP
SANPHAM "1" -- "*" CTDONHANG
SANPHAM "1" -- "*" CTDONTUYCHINH
SANPHAM "1" -- "*" CONGTHUC
SANPHAM "1" -- "*" MESANXUAT

NGUYENLIEU "1" -- "*" CONGTHUC
NGUYENLIEU "1" -- "*" CTPHIEUNHAP
NGUYENLIEU "1" -- "*" CTPHIEUXUAT_NL

NHACUNGCAP "1" -- "*" PHIEUNHAPKHO

PHIEUNHAPKHO "1" -- "*" CTPHIEUNHAP
PHIEUXUATKHO "1" -- "*" CTPHIEUXUAT_NL
PHIEUXUATKHO "1" -- "*" CTPHIEUXUAT_TP
PHIEUXUATKHO "1" -- "1" MESANXUAT : nguyen lieu SX

CTPHIEUNHAP "1" -- "*" CTPHIEUXUAT_NL : FEFO

LOAITHUCHI "1" -- "*" PHIEUTHUCHI
PHIEUTHUCHI "*" -- "0..1" HOADON
PHIEUTHUCHI "*" -- "0..1" PHIEUNHAPKHO

@enduml